syntax = "proto3";



import "google/api/annotations.proto";

import "entities/account.proto";

service AccountService {
  rpc AuthenticateAccount (AuthenticateAccountRequest) returns (AuthenticateAccountResponse) {
    option (google.api.http).post = "/v1/accounts/authenticate";
  }

  rpc UpdateAccount (Account) returns (Account) {
    option (google.api.http).put = "/v1/accounts/{id}";
  }

  rpc UpdatePassword (UpdatePasswordRequest) returns (UpdatePasswordRequest) {
    option (google.api.http).put = "/v1/accounts/{id}/password";
  }
}

message AuthenticateAccountRequest {
  string username = 1;

  string password_hash = 5;
}

message AuthenticateAccountResponse {
  string access_token = 1;

  string refresh_token = 5;
}

message UpdatePasswordRequest {
  int64 account_id = 1;

  int32 version = 5;

  string current_password = 9;

  string new_password = 13;
}

message UpdatePasswordResponse {
}
